# mat

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  active.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  cli.py  dashboard.py  pool_health.py  server.py  telemetry.py
configs/: default.yaml
connectors/: __init__.py  aa_mapping.py  calibrate.py  cli_import_aa.py  cli_migrate_pool.py  cli_pool.py  cli_sync_aa.py  discover_lmstudio.py  dotenv.py  efficiency.py  import_aa.py  import_openrouter.py  lmstudio_api.py  loader.py  local_affinity.py  paths.py  pool_curated.py  pool_resolver.py  provider_pricing.py  schema.py
connectors/curated/: local-dev-pool.yaml
connectors/examples/: alpha-coder.yaml  beta-general.yaml  delta-heldout.yaml  gamma-fast.yaml  openrouter-deepseek-v4-flash.yaml  openrouter-deepseek-v4-pro.yaml  openrouter-mimo-v2.5-pro.yaml  (+2 more)
coordinator/: __init__.py  checkpoint.py  factory.py  features.py  policy.py  slm_coordinator.py  train.py
docs/: connector-spec.md  eval-protocol.md  getting-started.md  phaseA-result.md  runbook.md  secrets-policy.md  trinity-alignment.md  trinity-progress.md
eval/: __init__.py  benchmark.py  coding.py  harness.py  live_loop.py  oracle.py  phase_a.py  train_live.py  train_live_slm.py
loop/: __init__.py  coding_detect.py  difficulty.py  modality.py  runner.py
probe_set/: __init__.py  cli.py  suite.py
scripts/: dev-loop.sh  merge_union.py  overnight_slm.sh
tests/: test_aa_scrape.py  test_connectors_aa.py  test_core.py  test_efficiency.py  test_integration_mock.py  test_live_eval.py  test_llm_lmstudio.py  test_lmstudio_api.py  test_local_affinity.py  test_loop_live.py  test_pool_health.py  test_pool_resolver.py  test_provider_pricing.py  test_telemetry.py
tool_backend/: __init__.py  backend.py  sandbox.py
traces/: __init__.py  benchmark_val2.json  logger.py  redact.py
workers/: __init__.py  llm.py  mock.py
(+9 files in other folders)
