[project]
name = "mat"
version = "0.1.0"
description = "Open-source LLM orchestration with capability-based routing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "James Docherty" }]
keywords = ["llm", "orchestration", "openai", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cma>=4.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
slm = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
]

[project.scripts]
mat-profile = "probe_set.cli:main"
mat-serve = "api.server:main"
mat-phase-a = "eval.phase_a:main"
mat-benchmark = "eval.benchmark:main"
mat-train-live = "eval.train_live:main"
mat-sync-aa = "connectors.cli_sync_aa:main"
mat-import-aa = "connectors.cli_import_aa:main"
mat-discover-lmstudio = "connectors.discover_lmstudio:main"
mat-calibrate = "connectors.calibrate:main"
mat-pool = "connectors.cli_pool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "coordinator",
    "loop",
    "connectors",
    "probe_set",
    "api",
    "tool_backend",
    "eval",
    "traces",
    "workers",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
